   Suggested by Vincent Lari.
 - Added "accessRestricted" property to CookieSetting, currently mapped to the "httpOnly" Cookie attribute
   supported by recent browsers to prevent XSS attacks. Contributed by Rob Heittman.
 - Added logger-less constructors to Template. Suggested by Justin Makeig.
 - A custom classloader can now be specified when using the CLAP URIs. Just set the attribute
   "org.restlet.clap.classloader" on your Request instances with your classloader instance. This will
   be automatically be picked up by the CLAP connector. Reported by Alex Milowski.
 - Guard.secrets is now a final ConcurrentMap instead of just a Map instance. Suggested by Tim Peierls. 
 - Renamed Context's "dispatcher" property into "clientDispatcher" to distinguish with the new 
   "serverDispatcher" property. The "serverDispatcher" property allows the developer to optimize the
   sending of request to applications under the current component/JVM, as if they were dispatched by one
   of the server connectors. Suggested by Rob Heittman with feed-back from Marc Portier.
 - Split the Resource class to separate a new org.restlet.Handler class exposing the lower-level API,
   from the higher-level API of Resource. 
 - Added "available", "modifiable" and "readable" properties to the Resource class.
  
[Misc]
 - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
 - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
 - Added Response.locationRef property as a replacement for the Response.redirectRef
   property that is now deprecated. Suggested by Michael Vogel and Avi Flax.
 - Updated projects to Eclipse 3.3. Minor adjustments required.
 - The ConverterService and all related methods on Message are deprecated, with no replacement as it 
   doesn't fit well with content negotiation. Most users prefer to handle those conversion in Resource
   subclasses. Suggested by Justin Makeig, Rob Heittman, Sumit Lohia.
 
 