@@ -100,7 +100,11 @@ Changes log
  - Split the Resource class to separate a new org.restlet.Handler class exposing the lower-level API,
    from the higher-level API of Resource. 
  - Added "available", "modifiable" and "readable" properties to the Resource class.
-  
+ - Added "rechallengeEnabled" property to Guard (true by default) to repeatedly challenge the client upon 
+   reception of invalid credentials instead of forbidding the access like before. This conforms more 
+   closely to the HTTP 1.1 specifications while leaving the door open for the stricter behavior. 
+   Reported by Stephan Koops.
+
 [Misc]
  - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
  - Removed Jetty 5 connector from the code base. Jetty 6 connector is stable enough now.
